# espacy

./: README.md  pyproject.toml
src/espacy/: __init__.py  parser.py  tregex.py
tests/: conftest.py  test_parser.py  test_tregex.py
